added some custom components

--- a/docs/man/man1/tangent.1
+++ b/docs/man/man1/tangent.1
@@ -1,4 +1,4 @@
-.TH TANGENT "9" "2019-03-28" "LinuxCNC Documentation" "HAL Component"
+.TH TANGENT "9" "2019-10-10" "LinuxCNC Documentation" "HAL Component"
 .de TQ
 .br
 .ns
@@ -7,33 +7,27 @@
 
 .SH NAME
 
-tangent \- Output tangent angle in degrees
+tangent \- Output trajectory tangent angle in degrees
 .SH SYNOPSIS
 .HP
 .B loadrt tangent [count=\fIN\fB|names=\fIname1\fB[,\fIname2...\fB]]
-
 .SH FUNCTIONS
 .TP
-\fBtangent.\fIN\fB\fR
-(requires a floating-point thread)
+\fBtangent.\fIN\fB\fR (requires a floating-point thread)
 
 .SH PINS
 .TP
-.B tangent.\fIN\fB.x\fR
-float in
-\fR
+.B tangent.\fIN\fB.x\fR float in \fR
 .TQ
-.B tangent.\fIN\fB.y\fR
-float in
-\fR
+.B tangent.\fIN\fB.y\fR float in \fR
 .TQ
-.B tangent.\fIN\fB.follow\fR
-bit in
-\fR
+.B tangent.\fIN\fB.follow\fR bit in \fR
 .TQ
-.B tangent.\fIN\fB.a\fR
-float out
-\fR
+.B tangent.\fIN\fB.a\fR float out \fR
+.TQ
+.B tangent.\fIN\fB.homed\fR bit in \fR
+.TQ
+.B tangent.\fIN\fB.enable\fR bit in \fR
 .SH LICENSE
 
 GPL
